--- a/project-1/src/main/webapp/WEB-INF/web.xml
+++ b/project-1/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,15 @@
     <servlet-name>FrontController</servlet-name>
     <url-pattern>/login</url-pattern>
     <url-pattern>/logout</url-pattern>
-    <url-pattern>/employees</url-pattern>
+    <url-pattern>/user</url-pattern>
+    <url-pattern>/user/delete</url-pattern>
+    <url-pattern>/users/view</url-pattern>
+    <url-pattern>/reimbursement/submit</url-pattern>
+    <url-pattern>/reimbursement/delete</url-pattern>
+    <url-pattern>/reimbursements/view-authored</url-pattern>
+    <url-pattern>/reimbursements/view-past</url-pattern>
+    <url-pattern>/reimbursements/view-pending</url-pattern>
+    <url-pattern>/authorize</url-pattern>
+    <url-pattern>/help</url-pattern>
   </servlet-mapping>
 </web-app>
