all employee functionalities now work

--- a/project-1/src/main/webapp/WEB-INF/web.xml
+++ b/project-1/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,7 @@
     <url-pattern>/logout</url-pattern>
     <url-pattern>/user</url-pattern>
     <url-pattern>/user/delete</url-pattern>
+    <url-pattern>/user/update</url-pattern>
     <url-pattern>/users/view</url-pattern>
     <url-pattern>/reimbursement/submit</url-pattern>
     <url-pattern>/reimbursement/delete</url-pattern>
