Updating pom.xml to add heroku-maven plugin

--- a/project-1/pom.xml
+++ b/project-1/pom.xml
@@ -77,9 +77,14 @@
 		    <artifactId>jbcrypt</artifactId>
 		    <version>0.3m</version>
 		</dependency>
-
-
-
-
 	</dependencies>
+	<build>
+	    <plugins>
+	      <plugin>
+		<groupId>com.heroku.sdk</groupId>
+		<artifactId>heroku-maven-plugin</artifactId>
+		<version>3.0.3</version>
+	      </plugin>
+	    </plugins>
+  </build>
 </project>
